--- a/Week-1/site/index.html
+++ b/Week-1/site/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Hello Coursera, This is a wonderful opportunity to be enrolled without payment!</h1>
 </body>
 </html>
