Uploading updated activities and newly added/modified files

--- a/Week-1/site/index.html
+++ b/Week-1/site/index.html
@@ -3,8 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>Hello Coursera</title>
+	<style type="text/css">
+		
+		p::first-letter{
+			font-weight: 600;
+			font-size: 25px;
+		}
+	</style>
 </head>
 <body>
 <h1>Hello Coursera, This is a wonderful opportunity to be enrolled without payment!</h1>
+<p>
+	Hello there! How are you doing today? <br>
+	Oh how wonderful to be here in this world!
+</p>
 </body>
 </html>
