Saving my work at Week 1, Essential HTML5 Tags, Lecture 6 Practical Quiz

--- a/Week-1/site/index.html
+++ b/Week-1/site/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en"> <!--adding lang attribute is important to set the default language of the page: https://www.w3.org/International/tutorials/language-decl/#:~:text=Always%20add%20a%20lang%20attribute,default%20language%20of%20your%20page.&text=If%20this%20is%20XHTML%201,use%20the%20xml%3Alang%20attribute.-->
 <head>
 	<meta charset="utf-8">
 	<title>Hello Coursera</title>
-	<style type="text/css">
-		
+	<style>
+		#fletter{
+   		display:block;
+		}
+		#fletter:first-letter {
+		    font-weight: 600;
+			font-size: 25px;
+		}
+
+		[id^="t"] {
+		  font-size: 50px;
+		}
 		p::first-letter{
 			font-weight: 600;
 			font-size: 25px;
